# vm-renting

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/: Client.h  ClientType.h  ClientsManager.h  ClientsRepository.h  Exception.h  Machine.h  MachinesManager.h  MachinesRepository.h  NonVip.h  Repository.h  Reservation.h  ReservationsManager.h  ReservationsRepository.h  Vip.h
lib/src/: Client.cpp  ClientType.cpp  ClientsManager.cpp  ClientsRepository.cpp  Exception.cpp  Machine.cpp  MachinesManager.cpp  MachinesRepository.cpp  NonVip.cpp  Repository.cpp  Reservation.cpp  ReservationsManager.cpp  ReservationsRepository.cpp  Vip.cpp
lib/test/: ClientTest.cpp  ManagerTest.cpp  RepositoryTest.cpp  ReservationTest.cpp  master.cpp
program/: CMakeLists.txt
program/src/: main.cpp
